--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   background-color: #a6acaf;
-  /* font-family: cursive; */
+  font-family: cursive;
 }
 
 #test {
@@ -65,6 +65,23 @@ form {
 }
 
 @media (max-width: 500px) {
+
+  #test {
+  text-align: center;
+  position: relative;
+  height: 80%;
+  width:100%;
+  top: 10%;
+  margin-left: 20%;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+  background-color: #ECF0F1;
+  border-radius: 20px;
+}
+
+#btn {
+ display: none;
+}
+
   #test h3 {
     margin-left: 13%;
     text-align: center;
@@ -79,24 +96,27 @@ form {
   }
 
   input[type="text"] {
-    padding: 5px;
+    padding: 7px;
     border: 0px;
-    width: 130px;
+    width:95%;
     border-radius: 10px;
     font-size: 15px;
   }
 
-  #btn {
-    padding: 5px;
-    border: 2px solid black;
-    border-radius: 5px;
-    font-weight: 500;
-    font-size: 15px;
-    font-family: cursive;
-    margin-left: 10px;
-  }
+#test {
+  text-align: center;
+  position: absolute;
+  width: 60%;
+  height: 80%;
+  top: 10%;
+  margin-left: 20%;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+  background-color: #ECF0F1;
+  border-radius: 20px;
+}
+
 
   #test #test2 ul > li {
-    font-size: 15px;
+    font-size: 25px;
   }
 }
